# quickjs-elixir

./: .gitignore  README.md  mix.exs  timetest.exs
lib/: quickjs.ex
lib/quickjs/: native.ex
native/quickjs_native/: Cargo.toml  README.md
native/quickjs_native/examples/: run.rs
native/quickjs_native/src/: lib.rs  serde_json_wrapper.rs
test/: quickjs_test.exs
