[package]
name = "quickjs_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "quickjs_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
log = "0.4.18"
rquickjs = {version = "0.1.7", features = ["full"]}
rustler = "0.28.0"
serde_json = "1.0.96"
